ARROW-8860: [C++] Fix IPC/Feather decompression for nested types (with child_data)