python/pyarrow/tests/test_feather.py
@@ -20,10 +20,12 @@ import os
 import sys
 import tempfile
 import pytest
+import hypothesis as h
 
 import numpy as np
 
 import pyarrow as pa
+import pyarrow.tests.strategies as past
 from pyarrow.feather import (read_feather, write_feather, read_table,
                              FeatherDataset)
 
@@ -42,6 +44,11 @@ def random_path(prefix='feather_'):
 
 @pytest.fixture(scope="module", params=[1, 2])
 def version(request):
+    yield request.param
+
+
+@pytest.fixture(scope="module", params=[None, "uncompressed", "lz4", "zstd"])
+def compression(request):
     yield request.param
 
 
@@ -87,12 +94,12 @@ def _check_pandas_roundtrip(df, expected=None, path=None,
     assert_frame_equal(result, expected)
 
 
-def _check_arrow_roundtrip(table, path=None):
+def _check_arrow_roundtrip(table, path=None, compression=None):
     if path is None:
         path = random_path()
 
     TEST_FILES.append(path)
-    write_feather(table, path)
+    write_feather(table, path, compression=compression)
     if not os.path.exists(path):
         raise Exception('file not written')
 
@@ -753,3 +760,18 @@ def test_read_column_duplicated_in_file(tempdir):
     # selection with column names errors
     with pytest.raises(ValueError):
         read_table(path, columns=['a', 'b'])
+
+
+def test_nested_types(compression):
+    # https://issues.apache.org/jira/browse/ARROW-8860
+    table = pa.table({'col': pa.StructArray.from_arrays(
+        [[0, 1, 2], [1, 2, 3]], names=["f1", "f2"])})
+    _check_arrow_roundtrip(table, compression=compression)
+
+    table = pa.table({'col': pa.array([[1, 2], [3, 4]])})
+    _check_arrow_roundtrip(table, compression=compression)
+
+
+@h.given(past.all_tables)
+def test_roundtrip(table):
+    _check_arrow_roundtrip(table)
